# proyecto-propiedades

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend-developer/: .dockerignore  .gitignore  Dockerfile  README.md  docusaurus.config.ts  nginx.conf  package-lock.json  package.json  sidebars.ts
backend/app/: config.py  database.py  dependencies.py  exceptions.py  llm_service.py  main.py  models.py  prompts.py  query_cache.py  repositories.py  routes.py  schemas.py  search_service.py  sql_validator.py
backend/persistencia/: 01_schema.sql  02_seed_data.sql  runner.py
backend/scripts/: README.md  scrape_mapainmueble.py
backend/tests/: conftest.py
backend/tests/contract/: openapi_snapshot.json  test_llm_provider_contract.py  test_openapi_snapshot.py  test_repository_contract.py
backend/tests/integration/: test_db_schema.py  test_health_endpoint.py  test_search_endpoint.py
backend/tests/smoke/: test_smoke.py
backend/tests/unit/: test_config.py  test_exceptions.py  test_llm_service.py  test_prompt_injection.py  test_prompts.py  test_query_cache.py  test_repositories.py  test_search_service.py  test_sql_validator.py
design_handoff_uikit_redesign/: PROMPT.md  README.md
diagrams/: deployment.html  sequence-search.html  use-cases.html
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+59 files in other folders)
